# app_multi_output_models

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
data/: generated_data_test.csv  generated_data_train.csv
src/app/: app.py
src/app/utils/: data.py  encoder.py  model.py
