[project]
name = "app-multi-output-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
    "pyaml>=25.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]
